# dxk_set_contest

./: .gitignore  LICENSE  README.md  pyproject.toml  set_contest
src/dxk_set_contest/: set_contest.py
src/set_contest/: __init__.py  set_contest.py
