[project]
name = "dxk_set_contest"
authors = [{name = "Ben Coleman", email = "oloryn@benshome.net"}]
version = "1.0.2"
description = "Create a DXKeeper script that will set QSOs from an ADIF file to a passed contest id"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Communications :: Ham Radio",
]
keywords = [
    "Amateur Radio",
    "Contact Logging",
]
dependencies = [
    "adif_io"
]

[build-system]
requires = ["setuptools>=65.5"]
build-backend = "setuptools.build_meta"

[project.scripts]
dxk_set_contest = "dxk_set_contest:set_contest"
